syntax = "proto3";

package ru.fp.example.proto;

option java_package = "ru.fp.transaction.proto";
option java_outer_classname = "TransactionProto";
option java_multiple_files = true;

service TransactionService {
  rpc transferTransaction(TransactionRequest) returns (TransactionResponse) {}
}

message TransactionRequest {
  repeated Transfer transfers = 1;
}

message Transfer {
  string bicCd = 1;
  string bicDb = 2;
  string valueDate = 3;
  double amount = 4;
  string currency = 5;
  string guid = 6;
}

message TransactionResponse {
  bool success = 1;
}